[tool.poetry]
name = "perseus"
version = "0.1.0"
description = "observerly's FastAPI of stars, galaxies and other astronomical bodies, adhering to the OpenAAS standard."
authors = ["Michael Roberts <michael@observerly.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.89.1"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
pydantic = "1.10.4"
email-validator = "^1.1.3"
sqlalchemy = "^1.4.44"
alembic = "^1.8.1"
astropy = "^5.1.1"
orjson = "^3.6.7"
furl = "^2.1.3"
requests = "^2.27.1"
sentry-sdk = "^1.5.10"
fastapi-cache2 = {extras = ["redis"], version = "^0.1.8"}
redis = "^4.0.2"
pymysql = "^1.0.2"
cryptography = "^39.0.1"
cloud-sql-python-connector = {extras = ["pymysql"], version = "^1.1.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^4.0.1"
autoflake = "^1.4"
isort = "^5.10.1"
black = "^22.1.0"
mypy = "^0.931"
tenacity = "^8.0.1"
httpx = "^0.22.0"
anyio = {extras = ["trio"], version = "^3.6.1"}
pytest-asyncio = "^0.18.3"
asgi-lifespan = "^1.0.1"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black" 
multi_line_output = 3
include_trailing_comma = false
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"